vlib/v/checker/tests/fn_call_no_body.vv
type Foo = int
fn (_ Foo) f()

fn f()

fn main() {
	Foo(0).f()
	f()
}
